fix the problem with invisible input on Safari browser, update box shadow

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -17,7 +17,7 @@
   min-height: 35px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 0 4px 0 red;
+  box-shadow: 0 0 4px red;
   text-transform: uppercase;
   font-style: italic;
   cursor: pointer;
