--- a/src/sass/Search.scss
+++ b/src/sass/Search.scss
@@ -14,8 +14,9 @@
     border: none;
     width: 100%;
     height: 35px;
-    box-shadow: 0 0 4px 0 black;
+    box-shadow: 0 0 4px black;
     font-size: 1rem;
+    appearance: none;
     &:focus {
       outline: none;
     }
